spec/v1/examples/data/rendered/apps/platform-valkey/networkpolicy.yaml
# GENERATED. Never hand-edit.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey
  namespace: data-system
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/instance: valkey
    app.kubernetes.io/part-of: platform-valkey
    app.kubernetes.io/managed-by: deploy-kit
    app.kubernetes.io/component: none
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: valkey
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth-system
      podSelector:
        matchLabels:
          app.kubernetes.io/instance: auth-api
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
